# $NetBSD: CHANGES-6.2,v 1.1.2.307 2017/08/31 15:20:47 martin Exp $

A complete list of changes from the 6.1 release until the 6.2 release:

doc/README.files				patched by hand
gnu/usr.bin/groff/tmac/mdoc.local		patched by hand
sys/sys/param.h					patched by hand

	Welcome to 6.1_STABLE!

sys/dev/usb/usb_quirks.c			1.78
sys/dev/usb/usbdevs				1.639
sys/dev/usb/usbdevs.h				regen
sys/dev/usb/usbdevs_data.h			regen

	Fix the detection of the tripplite USB SMARTLCD UPS.
	[garbled, ticket #849]

sys/dev/usb/usb.h				1.101-1.103

	Add some defines and macros.
	[skrll, ticket #850]

crypto/external/bsd/heimdal/bin/krb5-config/Makefile 1.2

	Don't force pthread linkage.
	[joerg, ticket #871]

external/gpl2/xcvs/Makefile.inc				patch
external/gpl2/xcvs/bin/xcvs/Makefile			patch
external/gpl2/xcvs/dist/INSTALL				patch
external/gpl2/xcvs/dist/Makefile.am			patch
external/gpl2/xcvs/dist/Makefile.in			patch
external/gpl2/xcvs/dist/aclocal.m4			patch
external/gpl2/xcvs/dist/config.h.in			patch
external/gpl2/xcvs/dist/configure			patch
external/gpl2/xcvs/dist/configure.in			patch
external/gpl2/xcvs/dist/acl/COPYING			patch
external/gpl2/xcvs/dist/acl/COPYING.LIB			patch
external/gpl2/xcvs/dist/acl/INSTALL			patch
external/gpl2/xcvs/dist/acl/README			patch
external/gpl2/xcvs/dist/acl/aclconfig.default		patch
external/gpl2/xcvs/dist/build-aux/compile		patch
external/gpl2/xcvs/dist/build-aux/config.guess		patch
external/gpl2/xcvs/dist/build-aux/config.sub		patch
external/gpl2/xcvs/dist/build-aux/depcomp		patch
external/gpl2/xcvs/dist/build-aux/install-sh		patch
external/gpl2/xcvs/dist/build-aux/mdate-sh		patch
external/gpl2/xcvs/dist/build-aux/missing		patch
external/gpl2/xcvs/dist/build-aux/mkinstalldirs		patch
external/gpl2/xcvs/dist/build-aux/texinfo.tex		patch
external/gpl2/xcvs/dist/build-aux/ylwrap		patch
external/gpl2/xcvs/dist/contrib/Makefile.in		patch
external/gpl2/xcvs/dist/contrib/pam/Makefile.in		patch
external/gpl2/xcvs/dist/diff/Makefile.in		patch